bitbybit-tests/tests/ui/ranges_value_is_range.stderr
error: custom attribute panicked
 --> tests/ui/ranges_value_is_range.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: ranges attribute argument must be an array of ranges
